--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.155",
     "react-router-dom": "^6.14.2",
     "react-tabs": "^6.0.2",
+    "react-transition-group": "^4.4.5",
     "reoverlay": "^1.0.3",
     "sort-by": "^1.2.0",
     "swiper": "^10.0.4"
