--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.32.1",
     "aos": "^2.3.4",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -24,7 +25,7 @@
     "react-tabs": "^6.0.2",
     "react-transition-group": "^4.4.5",
     "reoverlay": "^1.0.3",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "swiper": "^10.0.4"
   },
   "devDependencies": {
