--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-transition-group": "^4.4.5",
     "reoverlay": "^1.0.3",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.7.22",
     "swiper": "^10.0.4"
   },
   "devDependencies": {
