--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "aos": "^2.3.4",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.155",
     "react-router-dom": "^6.14.2",
