--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.32.1",
     "aos": "^2.3.4",
+    "chart.js": "^4.3.3",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
     "leaflet": "^1.9.4",
@@ -19,6 +20,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.14.2",
     "react-tabs": "^6.0.2",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.7.3",
     "reoverlay": "^1.0.3",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.7.22",
