--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.155",
     "react-router-dom": "^6.14.2",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.7.3",
     "reoverlay": "^1.0.3",
