--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.5",
     "@tanstack/react-query": "^4.32.1",
     "aos": "^2.3.4",
     "chart.js": "^4.3.3",
