--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-lazy-load": "^4.0.1",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
