--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
     "@tanstack/react-query": "^4.32.1",
     "aos": "^2.3.4",
     "chart.js": "^4.3.3",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
@@ -25,7 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-lazy-load": "^4.0.1",
@@ -42,7 +44,8 @@
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.7.28",
     "sweetalert2-react-content": "^5.0.7",
-    "swiper": "^10.0.4"
+    "swiper": "^10.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
