--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.454.0",
     "match-sorter": "^6.3.1",
     "react": "^18.3.1",
     "react-burger-menu": "^3.0.9",
